--- a/src/style.css
+++ b/src/style.css
@@ -114,7 +114,7 @@ button {
 
 .filter-container {
     width: 30%;
-    max-width: 300px;
+    max-width: 200px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -129,11 +129,12 @@ button {
     background-color: var(--secondary-bg-color);
     box-shadow: 3px 4px 10px 2px rgba(0, 0, 0, 0.2);
     color: var(--text-color);
-    font-size: 14px;
+    font-size: 12px;
     outline: none;
     border-radius: 5px;
     display: flex;
     justify-content: space-evenly;
+    gap: 5px;
 }
 
 .filter {
