--- a/src/style.css
+++ b/src/style.css
@@ -150,7 +150,8 @@ button {
     background-color: var(--secondary-bg-color);
     border-radius: 5px;
 }
-.filter-link{
+
+.filter-link {
     z-index: 3;
     background-color: var(--secondary-bg-color);
     padding: 20px;
@@ -159,7 +160,8 @@ button {
     border: 1px solid var(--bg-color);
     border-radius: 5px;
 }
-.filter-link:hover{
+
+.filter-link:hover {
     transform: scale(1.05);
     background-color: var(--bg-color);
 }
@@ -178,9 +180,11 @@ button {
     background-color: var(--secondary-bg-color);
     transition: 0.4s;
 }
-.card:hover{
+
+.card:hover {
     transform: scale(1.05);
 }
+
 .card img {
     width: 250px;
     height: 150px;
@@ -213,4 +217,54 @@ button {
     font-size: 15px;
     font-weight: 100;
     letter-spacing: 1px;
+}
+
+
+/* DETAILS */
+
+.details-container {
+    min-height: 100vh;
+    display: flex;
+    align-items: flex-start;
+    padding-top: 100px;
+    justify-content: center;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
+.details {
+    width: 100%;
+    max-width: 1440px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.back-button {
+    box-shadow: 3px 4px 10px 2px rgba(0, 0, 0, 0.2);
+    color: var(--text-color);
+    font-size: 14px;
+    background-color: var(--secondary-bg-color);
+    border: none;
+    padding: 10px 25px 10px 20px;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.back-button:hover {
+    transform: scale(1.06);
+}
+
+.details-info-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid white;
+    margin-top: 20px;
+    gap: 50px;
+}
+
+.details-flag {
+    width: 100%;
+    height: 100%;
 }
