--- a/src/style.css
+++ b/src/style.css
@@ -259,12 +259,45 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid white;
     margin-top: 20px;
     gap: 50px;
+    padding: 0 20px;
+    width: 100%;
 }
 
 .details-flag {
     width: 100%;
     height: 100%;
+    max-width: 350px;
+    max-height: 200px;
+}
+
+.details-main-info,
+.details-sub-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 40px 0;
+}
+
+.d-info{
+    font-weight: bold;
+}
+.d-info-value{
+    font-weight: 100;
+}
+@media screen and (min-width: 800px) {
+
+    .details-info-container {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 70px;
+    }
+
+    .details-flag {
+        width: 400px;
+        height: 100%
+    }
+
 }
