--- a/src/style.css
+++ b/src/style.css
@@ -238,6 +238,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .back-button {
@@ -268,8 +269,9 @@ button {
 .details-flag {
     width: 100%;
     height: 100%;
-    max-width: 350px;
+    max-width: 400px;
     max-height: 200px;
+    object-fit: contain;
 }
 
 .details-main-info,
@@ -292,12 +294,12 @@ button {
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        gap: 70px;
+        gap: 20px;
     }
 
     .details-flag {
-        width: 400px;
-        height: 100%
+        max-width: 500px;
+        max-height: 250px;
     }
 
 }
@@ -307,17 +309,18 @@ button {
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        gap: 70px;
+        gap: 20px;
     }
 
     .details-flag {
-        width: 400px;
-        height: 100%
+        max-width: 600px;
+        max-height: 300px;
     }
     .details-inner-info{
         display: flex;
         justify-content: flex-start;
         align-items: center;
+        gap: 20px;
     }
 
 }
